removes old data source classes and continues renaming

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,11 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "bubblewrap"
+name = "adaptive_latents"
 version = "0.0.1"
 description = "Methods for real-time prediction of latent neural dynamics"
-authors = [{name = "Anne Draelos"},
-           {name = "Jonathan Gould"},
-           {name = "Pranjal Gupta"},
-           {name = "Na Young Jun"},
-           {name = "Chaichontat Sriworarat"},
-           {name = "John Pearson", email = "john.pearson@duke.edu"}]
-
+authors = [{name = "Jonathan Gould", email = "jngould@umich.edu"},
+           {name = "Anne Draelos", email = "adraelos@umich.edu"}]
 readme = "README.md"
 requires-python = ">=3.7"
 keywords = ["neuroscience", "prediction", "dynamics"]
