gets tests to pass and adds coverage reports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,16 @@ packages = ["adaptive_latents"]
 
 [tool.distutils.egg_info]
 egg_base = "dist"
+
+[tool.coverage.html]
+directory = "cov_html"
+
+[tool.pytest.ini_options]
+addopts = """--cov=./adaptive_latents \
+--cov-report=html:./tests/reports/coverage-html \
+--cov-report=xml:./tests/reports/coverage.xml \
+"""
+
+testpaths = [
+    "tests",
+]
