--- a/adaptive_latents_config.yaml
+++ b/adaptive_latents_config.yaml
@@ -2,6 +2,5 @@
 attempt_to_cache: True
 show_cache_files: True
 
-# data_path: ./generated/datasets
-data_path: /home/jgould/Documents/Bubblewrap/generated/datasets
+data_path: ./generated/datasets
 output_path: ./generated
