moves the default config yaml to src

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ pythonpath = [
 [tool.setuptools]
 packages = ["adaptive_latents"]
 
+[tool.setuptools.package-data]
+adaptive_latents = ["adaptive_latents_config.yaml"]
 
 [tool.coverage.run]
 include = [
