moves filesystem-dependent things to scripts
also continues using config file for more stuff

--- a/environment.yml
+++ b/environment.yml
@@ -15,7 +15,8 @@ dependencies:
   - h5py
   - pynwb
   - scikit-image
-  # mmica dependencies
+  - coverage
+# mmica dependencies
   - numba
   # end mmica dependencies
   - pip
