freezes the config variable upon loading

--- a/environment.yml
+++ b/environment.yml
@@ -21,6 +21,7 @@ dependencies:
   - requests
   - aiohttp
   - datahugger
+  - frozendict
   - numba # todo: this is for mmica, do I really need it?
   - pip
   - pip:
