adds the yapf formatter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,13 @@ packages = ["adaptive_latents"]
 [tool.setuptools.package-data]
 adaptive_latents = ["adaptive_latents_config.yaml"]
 
+[tool.yapf]
+based_on_style='facebook'
+ARITHMETIC_PRECEDENCE_INDICATION=true
+SPLIT_BEFORE_NAMED_ASSIGNS=true
+SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET=false
+COALESCE_BRACKETS=true
+COLUMN_LIMIT=250
 
 [tool.coverage.report]
 exclude_also = [
