makes an animation from the Leventhal data

--- a/adaptive_latents/adaptive_latents_config.yaml
+++ b/adaptive_latents/adaptive_latents_config.yaml
@@ -7,6 +7,7 @@ attempt_to_cache: False
 verbose: True
 
 bwrun_save_path: ./al_generated/bw_runs
+plot_save_path: ./al_generated/plots
 cache_path: ./al_generated/caches
 
 # note that while this configures defaults, they can still be overridden in your code
