--- a/adaptive_latents/adaptive_latents_config.yaml
+++ b/adaptive_latents/adaptive_latents_config.yaml
@@ -12,7 +12,7 @@ cache_path: ./al_generated/caches
 
 # note that while this configures defaults, they can still be overridden in your code
 default_parameters:
-  Bubblewrap:
+  BaseBubblewrap:
     num: 200
     lam: 1.0e-3
     nu: 1.0e-3
