--- a/environment.yml
+++ b/environment.yml
@@ -32,13 +32,14 @@ dependencies:
   - numba # todo: this is for mmica, do I really need it?
   - av
   - nbstripout
+  - pytorch
   - pip
   - pip:
      - jax[cuda12]
      - jaxlib
      - datahugger
      - python-picard
-     - "git+https://github.com/Jonathan-Gould/mmica"
-     - "git+https://github.com/catniplab/vjf.git@0eec61e91c29cf9a44b48c2a6694234b4404a2b3"
+     - "git+https://github.com/draeloslab/mmica"
+     - "git+https://github.com/Jonathan-Gould/vjf.git@allow_deepcopy"
 #     - matlabengine # todo: this might be removable
      # cd /usr/local/MATLAB/R*/extern/engines/python && pip install .
